Adjust messages under Luma from z-index:300 to 100 to prevent clash with minicart

--- a/view/base/web/css/source/_module.less
+++ b/view/base/web/css/source/_module.less
@@ -2,7 +2,7 @@
     .page.messages {
         position: sticky;
         top: 10px;
-        z-index: 300;
+        z-index: 100;
     }
 
     .loki-messages {
